# naml

./: .gitignore  README.md  environment.yml  jax_linear_reg.ipynb  kernel_regression.ipynb  neural_net.ipynb  pyproject.toml  requirements.txt
Lab01/: PCA_2D.ipynb  background_removal.ipynb  image_compression.ipynb
Lab02/: cancer_diagnostic.ipynb  handwriting_recognition.ipynb  image_compression_randomized.ipynb
Lab03/: LS-ridge-kernel_regression.ipynb  matrix_completion.ipynb
Lab04/: JAX.ipynb  linear-SVR-SVM.ipynb
Lab05/: gd_and_sdg.ipynb  kernel-SVM.ipynb
Lab06/: ANN_XOR.ipynb
Lab07/: california_housing.ipynb
Lab08/: 1st_order_optimization.ipynb  newton.ipynb  regularization.ipynb
Lab09/: handwriting_recognition_ANN.ipynb
Lab10/: Convolution1D.ipynb  Convolution2D.ipynb
MNIST/: ETL.py  MLP.py  MLP_wip.py  cofronto.ipynb  ff_nn.ipynb  main.ipynb  mlp.pkl  mlp_model.pkl
labs/Lab01/: PCA_2D.ipynb  background_removal.ipynb  basics_svd.ipynb  image_compression.ipynb
labs/Lab02/: cancer_diagnostic.ipynb  handwriting_recognition.ipynb  image_compression_randomized.ipynb
labs/Lab03/: matrix_completion.ipynb
labs/Lab04/: JAX.ipynb  kernel-SVM.ipynb  linear-SVR-SVM.ipynb
labs/Lab05/: gd_and_sdg.ipynb  kernel-SVM.ipynb
notes/: main.tex  style.tex
python_training/: 1_lecture.ipynb  Python_Lecture2.ipynb  README.md
